--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -57,12 +57,16 @@
   display: inline-block;
 }
 
-.note.back[class*="-base"] > .body .hint {
+.note.back[class$="-base"] > .body .hint {
   color: var(--accent-color);
 }
 
-.note.back[class*="-outlined"] > .body .hint {
+.note[class*="-outlined"] .body .hint {
   color: var(--border-color);
+}
+
+.note[class*="-base-outlined"] .body .hint {
+  color: var(--font-color);
 }
 
 .note.back[class*="-filled"] > .body .hint {
