--- a/src/styles/audio.css
+++ b/src/styles/audio.css
@@ -9,7 +9,7 @@
   fill: #fff;
 }
 
-.note.back[class*="-base"] > .body .replaybutton span svg polygon {
+.note.back[class$="-base"] > .body .replaybutton span svg polygon {
   fill: var(--accent-color);
   align-self: center;
 }
@@ -30,11 +30,11 @@
   fill: #fff;
 }
 
-.note.front[class*="-base"] .replaybutton svg polygon {
+.note.front[class$="-base"] .replaybutton svg polygon {
   fill: #fff;
 }
 
-.nightMode .note.front[class*="-base"] .replaybutton svg polygon {
+.nightMode .note.front[class$="-base"] .replaybutton svg polygon {
   fill: #000;
 }
 
@@ -44,6 +44,16 @@
 
 .nightMode .note.front[class*="-filled"] .replaybutton svg polygon {
   fill: #fff;
+}
+
+.note[class*="-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-outlined"] .replaybutton span svg polygon {
+  fill: var(--border-color);
+}
+
+.note[class*="-base-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-base-outlined"] .replaybutton span svg polygon {
+  fill: var(--font-color);
 }
 
 .note.front.note-white .replaybutton svg polygon {
@@ -76,11 +86,11 @@
   fill: #fff;
 }
 
-.note.front[class*="-base"] .replay-button svg path {
+.note.front[class$="-base"] .replay-button svg path {
   fill: #fff;
 }
 
-.nightMode .note.front[class*="-base"] .replay-button svg path {
+.nightMode .note.front[class$="-base"] .replay-button svg path {
   fill: #000;
 }
 
@@ -92,12 +102,16 @@
   fill: #fff;
 }
 
-.note.back[class*="-base"] > .body .replay-button svg path {
+.note.back[class$="-base"] > .body .replay-button svg path {
   fill: var(--accent-color);
 }
 
-.note.back[class*="-outlined"] > .body .replay-button svg path {
+.note[class*="-outlined"] .body .replay-button svg path {
   fill: var(--border-color);
+}
+
+.note[class*="-base-outlined"] .body .replay-button svg path {
+  fill: var(--font-color);
 }
 
 .note.back[class*="-filled"] > .body .replay-button svg path {
