--- a/src/styles/_page.css
+++ b/src/styles/_page.css
@@ -235,36 +235,36 @@ button {
   transition: all .5s ease;
 }
 
-.settings[class$="-base"] button.active,
-.settings[class$="-base"] button.active:hover {
+.settings[class*="-base"] button.active,
+.settings[class*="-base"] button.active:hover {
 	background-color: var(--accent-color);
 	border-color: var(--accent-color);
 	color: var(--background);
 }
 
-.settings[class$="-white-base"] button.active,
-.settings[class$="-white-base"] button.active:hover {
+.settings[class*="-white-base"] button.active,
+.settings[class*="-white-base"] button.active:hover {
   background-color: var(--font-color);
 	border-color: var(--font-color);
 	color: var(--background);
 }
 
-.settings[class$="-filled"] button.active,
-.settings[class$="-filled"] button.active:hover {
+.settings[class*="-filled"] button.active,
+.settings[class*="-filled"] button.active:hover {
   background-color: var(--note-background);
   border-color: var(--note-background);
   color: var(--front-color);
 }
 
-.settings[class$="-outlined"] button.active,
-.settings[class$="-outlined"] button.active:hover {
+.settings[class*="-outlined"] button.active,
+.settings[class*="-outlined"] button.active:hover {
   background-color: var(--border-color);
   border-color: var(--border-color);
   color: var(--background);
 }
 
-.settings[class$="-base-outlined"] button.active,
-.settings[class$="-base-outlined"] button.active:hover {
+.settings[class*="-base-outlined"] button.active,
+.settings[class*="-base-outlined"] button.active:hover {
   background-color: var(--font-color);
 	border-color: var(--font-color);
 	color: var(--background);
@@ -274,23 +274,23 @@ button {
   transition: all .5s ease;
 }
 
-.settings[class$="-base"] .footer a {
+.settings[class*="-base"] .footer a {
   color: var(--accent-color) !important;
 }
 
-.settings[class$="-white-base"] .footer a {
+.settings[class*="-white-base"] .footer a {
   color: var(--font-color) !important;
 }
 
-.settings[class$="-filled"] .footer a {
+.settings[class*="-filled"] .footer a {
   color: var(--font-color) !important;
 }
 
-.settings[class$="-outlined"] .footer a {
+.settings[class*="-outlined"] .footer a {
   color: var(--border-color) !important;
 }
 
-.settings[class$="-base-outlined"] .footer a {
+.settings[class*="-base-outlined"] .footer a {
   color: var(--font-color) !important;
 }
 
