--- a/src/styles/audio.css
+++ b/src/styles/audio.css
@@ -9,17 +9,17 @@
   fill: #fff;
 }
 
-.note.back[class$="-base"] > .body .replaybutton span svg polygon,
+.note.back[class*="-base"] > .body .replaybutton span svg polygon,
 .note.back[class*="-flag-"] > .body .replaybutton span svg polygon {
   fill: var(--back-accent-color, var(--accent-color));
   align-self: center;
 }
 
-.note.back[class$="-filled"] > .body .replaybutton span svg polygon {
+.note.back[class*="-filled"] > .body .replaybutton span svg polygon {
   fill: #000;
 }
 
-.nightMode .note.back[class$="-filled"] > .body .replaybutton span svg polygon {
+.nightMode .note.back[class*="-filled"] > .body .replaybutton span svg polygon {
   fill: #fff;
 }
 
@@ -31,7 +31,7 @@
   fill: #fff;
 }
 
-.note.front[class$="-base"] .replaybutton svg polygon {
+.note.front[class*="-base"] .replaybutton svg polygon {
   fill: #fff;
 }
 
@@ -39,25 +39,25 @@
   fill: var(--front-color);
 }
 
-.nightMode .note.front[class$="-base"] .replaybutton svg polygon {
+.nightMode .note.front[class*="-base"] .replaybutton svg polygon {
   fill: #000;
 }
 
-.note.front[class$="-filled"] .replaybutton svg polygon {
+.note.front[class*="-filled"] .replaybutton svg polygon {
   fill: #000;
 }
 
-.nightMode .note.front[class$="-filled"] .replaybutton svg polygon {
+.nightMode .note.front[class*="-filled"] .replaybutton svg polygon {
   fill: #fff;
 }
 
-.note[class$="-outlined"] .replaybutton span svg polygon,
-.nightMode .note[class$="-outlined"] .replaybutton span svg polygon {
+.note[class*="-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-outlined"] .replaybutton span svg polygon {
   fill: var(--border-color);
 }
 
-.note[class$="-base-outlined"] .replaybutton span svg polygon,
-.nightMode .note[class$="-base-outlined"] .replaybutton span svg polygon {
+.note[class*="-base-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-base-outlined"] .replaybutton span svg polygon {
   fill: var(--font-color);
 }
 
@@ -91,19 +91,19 @@
   fill: #fff;
 }
 
-.note.front[class$="-base"] .replay-button svg path {
+.note.front[class*="-base"] .replay-button svg path {
   fill: #fff;
 }
 
-.nightMode .note.front[class$="-base"] .replay-button svg path {
+.nightMode .note.front[class*="-base"] .replay-button svg path {
   fill: #000;
 }
 
-.note.front[class$="-filled"] .replay-button svg path {
+.note.front[class*="-filled"] .replay-button svg path {
   fill: #000;
 }
 
-.nightMode .note.front[class$="-filled"] .replay-button svg path {
+.nightMode .note.front[class*="-filled"] .replay-button svg path {
   fill: #fff;
 }
 
@@ -111,24 +111,24 @@
   fill: var(--front-color);
 }
 
-.note.back[class$="-base"] > .body .replay-button svg path,
+.note.back[class*="-base"] > .body .replay-button svg path,
 .note.back[class*="-flag-"] > .body .replay-button svg path {
   fill: var(--back-accent-color, var(--accent-color));
 }
 
-.note[class$="-outlined"] .body .replay-button svg path {
+.note[class*="-outlined"] .body .replay-button svg path {
   fill: var(--border-color);
 }
 
-.note[class$="-base-outlined"] .body .replay-button svg path {
+.note[class*="-base-outlined"] .body .replay-button svg path {
   fill: var(--font-color);
 }
 
-.note.back[class$="-filled"] > .body .replay-button svg path {
+.note.back[class*="-filled"] > .body .replay-button svg path {
   fill: #000;
 }
 
-.nightMode .note.back[class$="-filled"] > .body .replay-button svg path {
+.nightMode .note.back[class*="-filled"] > .body .replay-button svg path {
   fill: #fff;
 }
 
