--- a/models/styles.css
+++ b/models/styles.css
@@ -518,24 +518,24 @@
   display: inline-block;
 }
 
-.note.back[class$="-base"] > .body .hint,
+.note.back[class*="-base"] > .body .hint,
 .note.back[class*="-flag-"] > .body .hint {
   color: var(--back-accent-color, var(--accent-color));
 }
 
-.note[class$="-outlined"] .body .hint {
+.note[class*="-outlined"] .body .hint {
   color: var(--border-color);
 }
 
-.note[class$="-base-outlined"] .body .hint {
+.note[class*="-base-outlined"] .body .hint {
   color: var(--font-color);
 }
 
-.note.back[class$="-filled"] > .body .hint {
+.note.back[class*="-filled"] > .body .hint {
   color: #000;
 }
 
-.nightMode .note[class$="-filled"] .body .hint {
+.nightMode .note[class*="-filled"] .body .hint {
   color: #fff;
 }
 
@@ -636,17 +636,17 @@
   fill: #fff;
 }
 
-.note.back[class$="-base"] > .body .replaybutton span svg polygon,
+.note.back[class*="-base"] > .body .replaybutton span svg polygon,
 .note.back[class*="-flag-"] > .body .replaybutton span svg polygon {
   fill: var(--back-accent-color, var(--accent-color));
   align-self: center;
 }
 
-.note.back[class$="-filled"] > .body .replaybutton span svg polygon {
+.note.back[class*="-filled"] > .body .replaybutton span svg polygon {
   fill: #000;
 }
 
-.nightMode .note.back[class$="-filled"] > .body .replaybutton span svg polygon {
+.nightMode .note.back[class*="-filled"] > .body .replaybutton span svg polygon {
   fill: #fff;
 }
 
@@ -658,7 +658,7 @@
   fill: #fff;
 }
 
-.note.front[class$="-base"] .replaybutton svg polygon {
+.note.front[class*="-base"] .replaybutton svg polygon {
   fill: #fff;
 }
 
@@ -666,25 +666,25 @@
   fill: var(--front-color);
 }
 
-.nightMode .note.front[class$="-base"] .replaybutton svg polygon {
+.nightMode .note.front[class*="-base"] .replaybutton svg polygon {
   fill: #000;
 }
 
-.note.front[class$="-filled"] .replaybutton svg polygon {
+.note.front[class*="-filled"] .replaybutton svg polygon {
   fill: #000;
 }
 
-.nightMode .note.front[class$="-filled"] .replaybutton svg polygon {
+.nightMode .note.front[class*="-filled"] .replaybutton svg polygon {
   fill: #fff;
 }
 
-.note[class$="-outlined"] .replaybutton span svg polygon,
-.nightMode .note[class$="-outlined"] .replaybutton span svg polygon {
+.note[class*="-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-outlined"] .replaybutton span svg polygon {
   fill: var(--border-color);
 }
 
-.note[class$="-base-outlined"] .replaybutton span svg polygon,
-.nightMode .note[class$="-base-outlined"] .replaybutton span svg polygon {
+.note[class*="-base-outlined"] .replaybutton span svg polygon,
+.nightMode .note[class*="-base-outlined"] .replaybutton span svg polygon {
   fill: var(--font-color);
 }
 
@@ -718,19 +718,19 @@
   fill: #fff;
 }
 
-.note.front[class$="-base"] .replay-button svg path {
+.note.front[class*="-base"] .replay-button svg path {
   fill: #fff;
 }
 
-.nightMode .note.front[class$="-base"] .replay-button svg path {
+.nightMode .note.front[class*="-base"] .replay-button svg path {
   fill: #000;
 }
 
-.note.front[class$="-filled"] .replay-button svg path {
+.note.front[class*="-filled"] .replay-button svg path {
   fill: #000;
 }
 
-.nightMode .note.front[class$="-filled"] .replay-button svg path {
+.nightMode .note.front[class*="-filled"] .replay-button svg path {
   fill: #fff;
 }
 
@@ -738,24 +738,24 @@
   fill: var(--front-color);
 }
 
-.note.back[class$="-base"] > .body .replay-button svg path,
+.note.back[class*="-base"] > .body .replay-button svg path,
 .note.back[class*="-flag-"] > .body .replay-button svg path {
   fill: var(--back-accent-color, var(--accent-color));
 }
 
-.note[class$="-outlined"] .body .replay-button svg path {
+.note[class*="-outlined"] .body .replay-button svg path {
   fill: var(--border-color);
 }
 
-.note[class$="-base-outlined"] .body .replay-button svg path {
+.note[class*="-base-outlined"] .body .replay-button svg path {
   fill: var(--font-color);
 }
 
-.note.back[class$="-filled"] > .body .replay-button svg path {
+.note.back[class*="-filled"] > .body .replay-button svg path {
   fill: #000;
 }
 
-.nightMode .note.back[class$="-filled"] > .body .replay-button svg path {
+.nightMode .note.back[class*="-filled"] > .body .replay-button svg path {
   fill: #fff;
 }
 
